--- a/index.html
+++ b/index.html
@@ -17,36 +17,34 @@
     </div>
 
     <div class="section-one">
-        <div class="left">
-            <ul>
-                <li>This website is awesome</li>
-                <li>This website has some subtext that goes under here for the main title. It is smaller font and the color is lower contrast.</li>
-                <li><button>Sign Up</button></li>
-            </ul>
+        <div class="left-one">
+                <div class="hero-main">This website is awesome</div>
+                <div class="sub-text">This website has some subtext that goes under here for the main title. It is smaller font and the color is lower contrast.</div>
+                <div><button class="button-one">Sign Up</button></div>
         </div>
-        <div class="right">
-            <img>
+        <div class="right-one">
+            <img><p>An image will go here</p>
             <!-- insert image -->
         </div>
     </div>
 
     <div class="section-two">
-        <div class="information"></div>
+        <div class="information">some random information</div>
         <div class="cards">
             <div class="card">
                 <img> <!-- Insert Image -->
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img> <!-- Insert Image -->
+                <img class="img"><!-- Insert Image -->
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img> <!-- Insert Image -->
+                <im class="img"> <!-- Insert Image -->
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img> <!-- Insert Image -->
+                <img class="img"> <!-- Insert Image -->
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
@@ -54,7 +52,7 @@
 
     <div class="section-three">
         <div class="quote">This is an inspiring quote, djklgkjfnlrkhn   hf ih   hkjhkdhd  f gd fbeofgb w efg eugbhd g  dhgkjd f   k hb</div>
-        <div class="credit">Name of Quotee</div>
+        <div class="credit">- Name of Quotee</div>
     </div>
 
     <div class="section-four">
@@ -63,7 +61,7 @@
             <div class="cta-two">Sign Up etc etc</div>
         </div>
         <div class="right">
-            <button>Sign Up</button>
+            <button class="button-two">Sign Up</button>
         </div>
     </div>
 
