--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div><button class="button-one">Sign Up</button></div>
         </div>
         <div class="right-one">
-            <img><p>An image will go here</p>
+            <img src="./images/tree-sunset.jpeg" alt="cool tree">
             <!-- insert image -->
         </div>
     </div>
@@ -32,27 +32,28 @@
         <div class="information">some random information</div>
         <div class="cards">
             <div class="card">
-                <img> <!-- Insert Image -->
+                <img src="./images/elephant.jpeg" alt="wise elephant"> <!-- Insert Image -->
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img class="img"><!-- Insert Image -->
+                <img src="./images/forest.jpeg" alt="cool forest"><!-- Insert Image -->
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+
+            <div class="card">
+                <img src="./images/olive-tree.jpeg" alt="old olive tree"> <!-- Insert Image -->
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <im class="img"> <!-- Insert Image -->
-                <div class="text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="card">
-                <img class="img"> <!-- Insert Image -->
+                <img src="./images/tree-hill.jpeg" alt="tree on a green tree-hill"> <!-- Insert Image -->
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
 
     <div class="section-three">
-        <div class="quote">This is an inspiring quote, djklgkjfnlrkhn   hf ih   hkjhkdhd  f gd fbeofgb w efg eugbhd g  dhgkjd f   k hb</div>
-        <div class="credit">- Name of Quotee</div>
+        <div class="quote">The tree which moves some to tears of joy is in the eyes of others only a green thing which stands in the way. Some see nature all ridicule and deformity, and by these I shall not regulate my propositions. And some see no nature at all. But to the eyes of the man of imagination, nature is imagination itself.</div>
+        <div class="credit">- William Blake</div>
     </div>
 
     <div class="section-four">
@@ -65,7 +66,7 @@
         </div>
     </div>
 
-    <div class="footer">Copyright The Odin Project</div>
+    <div class="footer">Copyright © The Odin Project 2024</div>
     
 </body>
 </html>
